fixed some deprecation warnings when compiling with Java 11